<resources>
    <string name="app_name">طاكسي صغيرة</string>
    <string name="title_activity_acceuil_mol_taxi">Acceuil</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_acceuil_client">Acceuil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">أفضل الشوافرية</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nom">Nom</string>
    <string name="go">Go 👉</string>
    <string name="welcome">أهلا بك</string>
    <string name="prenom">Prenom</string>
    <string name="cin">CIN</string>
    <string name="couleur_de_taxi">Couleur De Taxi</string>
    <string name="ville">Ville</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="conteur">Conteur</string>
    <string name="sans_conteurs_tarif">Sans Conteurs / Tarif</string>
    <string name="tarif_dh">Tarif DH</string>
    <string name="trajet">Trajet</string>
    <string name="gmail">Gmail</string>
    <string name="licence">Licence</string>
    <string name="read_more">Read More</string>
    <string name="profile">Profile</string>
    <string name="rate">Rate</string>
    <string name="demande">Demande</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chercher">Chercher 👨‍💻</string>
    <string name="votre_location">Votre Location</string>
    <string name="place_d_arrive">Place d\'Arrive</string>
    <string name="account">Account</string>
    <string name="top_cheuffour">Top Cheuffour</string>
    <string name="top_client">Top Client</string>
    <string name="rate_given">Rate given</string>
    <string name="rate_taken">Rate Taken</string>
    <string name="setting">setting</string>
    <string name="deconnecter">Deconnecter</string>
    <string name="title_activity_maps">Map</string>
    <string name="j_arrive">J\'arrive ☺</string>
    <string name="depart_de">Depart De :</string>
    <string name="l_arrive_a">L\'arrive a :</string>
    <string name="get_a_ride_wherever_you_are_whenever_you_want">خود ليك طاكسي فينما كنتي أو فأي وقت بغيتي </string>
    <string name="continue_with_phone_number">تسجل بواسطة GOOGLE</string>
    <string name="continue_with">تسجل عن طريق</string>
    <string name="google"> GOOGLE</string>
    <string name="created_and_designed_by_treeprog">تم إنشاؤها وتصميمها بواسطة TreeProg</string>
    <string name="show">Show</string>
    <string name="ringing">"RINGING, number: "</string>
    <string name="offhook">OFFHOOK</string>
    <string name="idle">IDLE</string>
    <string name="restarting_app">Restarting app</string>
    <string name="permission_not_granted">إذن غير ممنوح!</string>
    <string name="dial_number">"حالة الهاتف: الاتصال:</string>
    <string name="failure_permission">عدم الحصول على إذن!</string>
    <string name="telephony_enabled">تم تمكين الاتصال الهاتفي</string>
    <string name="telephony_not_enabled">"لم يتم تمكين الهاتف!"</string>
    <string name="call">Call</string>
    <string name="make_a_call">إجراء مكالمة</string>
    <string name="send_a_message">ارسل رسالة</string>
    <string name="enter_message_here">أدخل الرسالة هنا</string>
    <string name="phone_disabled">تم تعطيل الاتصال الهاتفي</string>
    <string name="retry">Retry</string>
    <string name="sms_disabled">تم تعطيل استخدام الرسائل القصيرة</string>
    <string name="granted_permission">تم تأمين التصريح</string>
    <string name="putYourPhoneNumber">ادخل رقم الهاتف الخاص</string>
    <string name="msgforPhonePut">تاكد من ان رقم الهاتف صحيح من اجل التسجيل في التطبيق</string>
    <string name="next">التالي</string>
    <string name="changePhoneNumber">تغيير رقم الهاتف</string>
    <string name="checkYourPhoneNumber">تحقق من رقم هاتفك</string>
    <string name="msgForCheck">ادخل الرمز الدي تلقيته في هدا الرقم</string>
    <string name="or">أو</string>
    <string name="resend">أعادة إرسال الرمز</string>
    <string name="putgmail">ادخل بريدك الالكتروني</string>
    <string name="forbatterSafety">ادخل بريدك الالكتروني لحماية افضل</string>
    <string name="firstname">الاسم لاشخصي</string>
    <string name="lastname">الاسم العائلي</string>
    <string name="adress">العنوان</string>
    <string name="personaldata">ادخل بياناتك الشخصية</string>
    <string name="CinChifor">رقم بطاقة التعريف الوطنبة</string>
    <string name="NumTaXi">رقم سيارة الاجرة</string>
    <string name="Photo">📤تحميل صورة لبطاقة التعريف الوطنية</string>
    <string name="OuiNon">هل السيارة تحتوي على عداد?</string>
    <string name="Fullname">الاسم الكامل</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_map">Map</string>
    <string name="whereAreYouGoing">أين ستتجه؟</string>
    <string name="user_location_permission_not_granted">عدم الحصول على إذن!</string>
    <string name="user_location_permission_explanation">إذن غير ممنوح!</string>
    <string name="TreeProg">TreeProg</string>
    <string name="MadeBy">تم إنشاؤها وتصميمها بواسطة</string>
    <string name="pref_title_more">More Apps</string>
    <string name="pref_title_rate">Rate</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_dev_name">Developed By</string>
    <string name="pref_title_term">Term &amp; Policies</string>
    <string name="Apropos">
        TreeProg Sarl
    </string>
    <string name="pref_category_other"> Settings</string>
    <string name="developer_name"> Ayoub Ghoudan </string>
    <string name="copyright">  All Right Reserved</string>
</resources>