<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Both.PersonalInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/amiri"
                android:text="@string/personaldata"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/returnAnim" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:backgroundTint="@color/frutorial_title"
                android:ems="10"
                android:fontFamily="@font/amiri"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/frutorial_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:backgroundTint="@color/frutorial_title"
                    android:ems="10"
                    android:fontFamily="@font/amiri"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/frutorial_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstname" />

                <EditText
                    android:id="@+id/personalAdress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:backgroundTint="@color/frutorial_title"
                    android:ems="10"
                    android:fontFamily="@font/amiri"
                    android:hint="@string/adress"
                    android:inputType="textPostalAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/frutorial_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastname" />

            <Button
                android:id="@+id/gonext3"
                android:layout_width="315dp"
                android:layout_height="64dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/cerclebackgroundpurple"
                android:fontFamily="@font/harmattan"
                android:text="@string/next"
                android:textColor="@color/backgroundcolor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personalAdress"
                app:layout_constraintVertical_bias="1.0" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/returnAnim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:maxHeight="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/returnbutton"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>