<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Both.MsgNumber">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/amiri"
        android:text="@string/checkYourPhoneNumber"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/amiri"
        android:text="@string/msgForCheck"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/ChangePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/amiri"
        android:text="@string/changePhoneNumber"
        android:textAllCaps="true"
        android:textColor="@color/frutorial_title"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChangePhoneNumber">

        <EditText
            android:id="@+id/N1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1 "
            android:ems="10"
            android:fontFamily="@font/black_ops_one"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/frutorial_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/N2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1 "
            android:ems="10"
            android:fontFamily="@font/black_ops_one"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/frutorial_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/N3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1 "
            android:ems="10"
            android:fontFamily="@font/black_ops_one"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/frutorial_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/N4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1 "
            android:ems="10"
            android:fontFamily="@font/black_ops_one"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/frutorial_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/N5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/black_ops_one"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/frutorial_title" />

        <EditText
            android:id="@+id/N6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/black_ops_one"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/frutorial_title" />
    </TableRow>

    <Button
        android:id="@+id/resendCode"
        android:layout_width="159dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/harmattan"
        android:text="@string/resend"
        android:textColor="@color/frutorial_title"
        app:layout_constraintBottom_toTopOf="@+id/NumberNext"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/makeCall"
        android:layout_width="163dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/harmattan"
        android:text="@string/make_a_call"
        android:textColor="@color/frutorial_title"
        app:layout_constraintBottom_toTopOf="@+id/NumberNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/harmattan"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/NumberNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/NumberNext"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:background="@drawable/cerclebackgroundpurple"
        android:fontFamily="@font/harmattan"
        android:text="@string/next"
        android:textColor="@color/backgroundcolor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/returnAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:maxHeight="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/returnbutton"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>