<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Both.PutPhone">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="363dp"
        android:layout_height="367dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/linearLayout"
            android:layout_width="291dp"
            android:layout_height="191dp"
            android:layout_gravity="center"
            android:background="@drawable/ccp_selectable_bg"
            android:orientation="vertical"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/harmattan"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/get_a_ride_wherever_you_are_whenever_you_want"
            android:textColor="@color/bottomNavigationTintColor"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.687">

        <Button
            android:id="@+id/buttonphone"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cerclebackgroundpurple"
            android:fontFamily="@font/harmattan"
            android:gravity="center"
            android:text="@string/continue_with_phone_number"
            android:textColor="@color/backgroundcolor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/TxtGoogle"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/google"
                android:textColor="@color/yello"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/harmattan"
                android:gravity="end"
                android:text="@string/continue_with" />

        </TableRow>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ValideAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:maxHeight="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/logoanime" />

    <!--
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/passAnim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:lottie_rawRes="@raw/transition"
        app:lottie_speed="0.5"
        tools:visibility="invisible" />
-->

</androidx.constraintlayout.widget.ConstraintLayout>